Added aws ECS testing
It had been removed due to timing out / OOM issue on ECS
post adding kotlin to the build.

Updated the logic to use the gradle cache and uses the latest
ECS Test Process as directed in drivers-evergreen-tools/.evergreen/auth_aws/README.md

JAVA-4919